db image is ok, but not works properly